# Estructura_De_Datos

KDTREE_IMPLEMENTATION/: ArbolKD.cxx  ArbolKD.h  CMakeLists.txt  NodoKD.cxx  NodoKD.h  Punto.cxx  Punto.h  main.cpp
